fixed background colors in nav on mobile view

--- a/docs/assets/styles/main.css
+++ b/docs/assets/styles/main.css
@@ -156,7 +156,7 @@ p + p {
   width: 100%;
   height: 100%;
   right: 0;
-  background-image: var(--gradient-primary-down-primary-secondary);
+  background-image: linear-gradient(to right, var(--purple), var(--blue),  var(--cyan),  var(--green));
 }
 
 .header__list {
